[gd_scene load_steps=7 format=3 uid="uid://du1pwrd4udvhq"]

[ext_resource type="Texture2D" uid="uid://cdrstdyn1uyos" path="res://Sprites/conveyor_middle1.png" id="1_5miv0"]
[ext_resource type="Script" path="res://Scripts/Conveyor.gd" id="1_sj3gt"]
[ext_resource type="Script" path="res://Scripts/ConveyorBody.gd" id="2_iqqjv"]
[ext_resource type="Texture2D" uid="uid://dpnmo7m3pwhdg" path="res://Sprites/conveyor_left.png" id="3_fwotn"]
[ext_resource type="Texture2D" uid="uid://b8n5ild1ofk8q" path="res://Sprites/conveyor_right.png" id="4_iiup7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gxnfx"]
atlas = ExtResource("1_5miv0")
region = Rect2(0, 0, 166, 301)

[node name="Conveyor" type="Line2D"]
visibility_layer = 2
z_index = 30
texture_repeat = 2
points = PackedVector2Array(74, 109, 549, 51)
width = 200.0
texture = SubResource("AtlasTexture_gxnfx")
texture_mode = 1
script = ExtResource("1_sj3gt")

[node name="StaticBody" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 59
script = ExtResource("2_iqqjv")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="StaticBody"]

[node name="EndL" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_fwotn")
offset = Vector2(-162, 0)

[node name="EndR" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_iiup7")
offset = Vector2(-29, 5)
